--- a/.github/workflows/dev.yml
+++ b/.github/workflows/dev.yml
@@ -39,8 +39,8 @@ jobs:
 
       - name: Set environment variables
         run: |
-          echo "DOCKERHUB_REPO=${{ vars.DOCKERHUB_REPO }}" >> $GITHUB_ENV
-          echo "DOCKERHUB_IMG=${{ vars.DOCKERHUB_IMG }}" >> $GITHUB_ENV
+          echo "DOCKERHUB_REPO=kxhelilaj" >> $GITHUB_ENV
+          echo "DOCKERHUB_IMG=worker-comfyui" >> $GITHUB_ENV
           echo "HUGGINGFACE_ACCESS_TOKEN=${{ secrets.HUGGINGFACE_ACCESS_TOKEN }}" >> $GITHUB_ENV
           echo "RELEASE_VERSION=${GITHUB_REF##refs/heads/}" | sed 's/\//-/g' >> $GITHUB_ENV
 
